# travel_multi_agent_planner

./: .env.example  .gitignore  CLAUDE.md  PERSONALIZATION_DEMO.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: settings.local.json
.claude/agents/: personalization-maintainer.md  travel-core-maintainer.md
backend/: main.py
backend/routers/: cases.py  personalization.py  plan.py  route.py  status.py
docs/: agent个性化配置系统设计.md  baseline_and_scope.md  个性化补强与原始旅游优化总计划.md  旅游项目工程详解.md  运行指南.md  项目交接说明.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
personalization/: __init__.py  demo.py  engine.py
personalization/agents/: __init__.py  code_fixer.py  code_generator.py  code_modifier.py  code_planner.py  code_reviewer.py  code_validator.py  impact_analyzer.py  patch_explainer.py  requirement_parser.py  requirement_splitter.py  target_resolver.py  version_manager.py
personalization/extensions/: __init__.py
personalization/models/: __init__.py  personalization.py
tests/: test_orchestrator.py  test_personalization_pipeline.py
travel_multi_agent_planner/: __init__.py  app.py  config.py  models.py  orchestrator.py  persistence.py  scheduling.py
travel_multi_agent_planner/agents/: __init__.py  budget.py  food_spot.py  hotel.py  planner.py  requirement.py  search.py  transport.py  travel_notes.py  validator.py  web_guide.py
travel_multi_agent_planner/data/: __init__.py  sample_city_data.py
travel_multi_agent_planner/providers/: __init__.py  bailian.py  (+4 more)
(+15 files in other folders)
